--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,53 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Enter your Git notes here</li>
+        </ul>
+      </section>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your Javascript notes here</li>
+        </ul>
+      </section>
+      <section class="card" id="other-section">
+        <h2>Other</h2>
+        <h4>CLI (Command line interface):</h4>
+        <ul>
+          <li>pwd (print working directory) where you are now</li>
+          <li>ls list files in working directory</li>
+          <li>cd __ change directory to __</li>
+          <li>cd .. change back one directory level</li>
+          <li>mkdir make a new directory</li>
+          <li>touch file-name.txt create new text file</li>
+          <li>start __ open file</li>
+          <li>code . open vs code</li>
+        </ul>
+        <h4><!--Opening/merging branches--></h4>
+        <h4>Web Development process</h4>
+        <ol>
+          <li><!-- Add Notes here --></li>
+        </ol>
+      </section>
+      </section>
     </main>
 
     <footer>
