seperate topics into pages

--- a/CSSnotes.html
+++ b/CSSnotes.html
@@ -3,15 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0/">
-    <title>HTML notes</title>
+    <title>CSS notes</title>
     <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
-    <h1 class="card">HTML</h1>
-        <ul>
-          <li>The head element contains information about the webpage.</li>
-          <li>The body element represents the visible content shown to the user.</li>
-        </ul>
+    <h1 class="card">CSS</h1>  
+    <ul>
+        <li>Enter your CSS notes here</li>
+    </ul>     
 </body>
 <footer>
   <script src="./assets/script.js"></script>
