--- a/index.html
+++ b/index.html
@@ -11,55 +11,39 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
+      <!--HTML-->
       <section class="card" id="html-section">
         <a href="HTMLnotes.html"><h2>HTML</h2></a>
       </section>
+
+      <!--CSS-->
       <section class="card" id="css-section">
-        <h2>CSS</h2>
-        <ul>
-          <li>Enter your CSS notes here</li>
-        </ul>
+        <a href="CSSnotes.html"><h2>CSS</h2></a>
       </section>
-      </section>
+
+      <!--Git-->
       <section class="card" id="git-section">
-        <h2>Git</h2>
-        <ul>
-          <li>Enter your Git notes here</li>
-        </ul>
+        <a href="Gitnotes.html"><h2>Git</h2></a> 
       </section>
+    
+      <!--JS-->
       </section>
       <section class="card" id="javascript-section">
-        <h2>JavaScript</h2>
-        <ul>
-          <li>Enter your Javascript notes here</li>
-        </ul>
+        <a href="JavaScriptnotes.html"><h2>JavaScript</h2></a>
       </section>
+
+      <!--Other-->
       <section class="card" id="other-section">
-        <h2>Other</h2>
-        <h4>CLI (Command line interface):</h4>
-        <ul>
-          <li>pwd (print working directory) where you are now</li>
-          <li>ls list files in working directory</li>
-          <li>cd __ change directory to __</li>
-          <li>cd .. change back one directory level</li>
-          <li>mkdir make a new directory</li>
-          <li>touch file-name.txt create new text file</li>
-          <li>start __ open file</li>
-          <li>code . open vs code</li>
-        </ul>
-        <h4><!--Opening/merging branches--></h4>
-        <h4>Web Development process</h4>
-        <ol>
-          <li><!-- Add Notes here --></li>
-        </ol>
-      </section>
+        <a href="Othernotes.html"><h2>Other</h2></a>
       </section>
     </main>
 
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
