Added JS, other notes content

--- a/Gitnotes.html
+++ b/Gitnotes.html
@@ -8,9 +8,23 @@
 </head>
 <body>
     <h1 class="card">Git</h1>
+
+    <h3>Jargon:</h3>
     <ul>
-        <li>Enter your Git notes here</li>
+        <li>Git <span class="description">version control software. Allows users to make changes simultaneously</span></li>
+        <li>Repo (repository) <span class="description">name of project folder + revision history</span></li>
+        <li>Branch <span class="description">space for changes that doesn't affect live site</span></li>
+        <li>Markdown <span class="description">Plain text that converts to HTML easily. stored in .md files</span></li>
+        <li>Commit Changes <span class="description">adding, editing, or deleting files in repository</span></li>
+        <li>Pull Request <span class="description">request to merge changes from on branch with another. Add explanation comments and request reviewers</span></li>
+        <li>Merge <span class="description">publish/deploy changes to live site</span></li>
+        <li>Issue <span class="description">a way to report a new task or bug to fix. Tracked on project board.</span></li>
     </ul>
+    <br>
+
+    <h3>Git Commands:</h3>
+    
+
 </body>
 <footer>
   <script src="./assets/script.js"></script>
