--- a/Othernotes.html
+++ b/Othernotes.html
@@ -2,28 +2,52 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0/">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Other notes</title>
     <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
     <h1 class="card">Other Notes</h1>
-    <h2>CLI (Command line interface):</h2>
+
+    <h3>Development Jargon:</h3>
         <ul>
-          <li>pwd (print working directory) where you are now</li>
-          <li>ls list files in working directory</li>
-          <li>cd __ change directory to __</li>
-          <li>cd .. change back one directory level</li>
-          <li>mkdir make a new directory</li>
-          <li>touch file-name.txt create new text file</li>
-          <li>start __ open file</li>
-          <li>code . open vs code</li>
+            <li>User stories <span class="description">The type of user, what they want from an app, why they need it (what problem are they solving?)</span></li>
+            <li>Acceptance criteria <span class="description">Is it done? List of thing app needs to be finished</span></li>
+            <li>MA<span class="description"></span></li>
         </ul>
-        <h4><!--Opening/merging branches--></h4>
-        <h4>Web Development process</h4>
-        <ol>
-          <li><!-- Add Notes here --></li>
-        </ol>
+    <h3>Computational Thinking:</h3>
+     <ul>
+        <li>Decomposition <span class="description">Breaking into small tasks. write pseudocode as steps in comments</span></li>
+        <li>Pattern recognition <span class="description">repeating similar subtasks</span></li>
+        <li>Abstraction <span class="description">Ignore irrelevant details</span></li>
+        <li>Algorithms <span class="description">ordering, event triggers, conditions, debugging</span></li>
+        <li>Debugging <span class="description">finding mistakes and gaps</span></li>
+    </ul>
+    <br>
+
+    <h3>CLI (Command line interface):</h3>
+    <ul>
+        <li>pwd <span class="description">(print working directory) where you are now</span></li>
+        <li>ls <span class="description">list files in working directory</span></li>
+        <li>cd __ <span class="description">change directory to __</span></li>
+        <li>cd .. <span class="description">change back one directory level</span></li>
+        <li>mkdir <span class="description">make a new directory</span></li>
+        <li>touch <span class="example">file-name.txt </span><span class="description">create new text file</span></li>
+        <li>start __ <span class="description">open file</span></li>
+        <li>code . <span class="description">open vs code</span></li>
+    </ul>
+    <br>
+
+    <h3>Debugging</h3>
+    <br>
+
+    <h3>Web Development process</h3>
+    <ol>
+      <li><!-- Add Notes here --></li>
+    </ol>
+    <br>
+        
+        
 </body>
 <footer>
   <script src="./assets/script.js"></script>
