--- a/JavaScriptnotes.html
+++ b/JavaScriptnotes.html
@@ -9,8 +9,9 @@
 <body>
     <h1 class="card">JavaScript</h1>
     <ul>
-        <li>Enter your Javascript notes here</li>
-      </ul>
+      <li>A variable is a named container that allows us to store data in our code.</li>
+      <li>Control flow is the order in which a computer executes code in a script.</li>
+    </ul>
 </body>
 <footer>
   <script src="./assets/script.js"></script>
