add formatting page, change file names

--- a/index.html
+++ b/index.html
@@ -14,30 +14,35 @@
       <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
+
       <!--HTML-->
       <section class="card" id="html-section">
-        <a href="HTMLnotes.html"><h2>HTML</h2></a>
+        <a href="html-notes.html"><h2>HTML</h2></a>
       </section>
 
       <!--CSS-->
       <section class="card" id="css-section">
-        <a href="CSSnotes.html"><h2>CSS</h2></a>
+        <a href="css-notes.html"><h2>CSS</h2></a>
       </section>
 
       <!--Git-->
       <section class="card" id="git-section">
-        <a href="Gitnotes.html"><h2>Git</h2></a> 
+        <a href="git-notes.html"><h2>Git</h2></a> 
       </section>
     
       <!--JS-->
       </section>
       <section class="card" id="javascript-section">
-        <a href="JavaScriptnotes.html"><h2>JavaScript</h2></a>
+        <a href="javascript-notes.html"><h2>JavaScript</h2></a>
       </section>
 
+      <!--Formatting-->
+      <section class="card" id="formatting-section">
+        <a href="formatting-notes.html"><h2>Formatting</h2></a>
+      </section>
       <!--Other-->
       <section class="card" id="other-section">
-        <a href="Othernotes.html"><h2>Other</h2></a>
+        <a href="other-notes.html"><h2>Other</h2></a>
       </section>
     </main>
 
