add semantic html notes

--- a/html-notes.html
+++ b/html-notes.html
@@ -7,11 +7,55 @@
     <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
-    <h1 class="card">HTML</h1>
-        <ul>
-          <li>The head element contains information about the webpage.</li>
-          <li>The body element represents the visible content shown to the user.</li>
-        </ul>
+
+<h1 class="card">HTML</h1>
+
+
+<h3>Semantic HTML:</h3>
+<ul>
+  <li>Semantic HTML <span class="description">Elements defined by use</span></li>
+  <li>header <span class="description">
+    navigational links, introductory content, h1-h6. use h1 only once on page
+    </span>
+  </li>
+
+  <li>nav <span class="description">
+    For navigation links (menu, table of content...), On own or in header,  
+    </span>
+  </li>
+
+  <li>main <span class="description">Section where main content appears</span></li>
+  
+  <li>footer <span class="description">
+    Contact info, copyright, terms of use, site map, ref to top of page links. 
+    </span></li>
+
+  <li>section <span class="description">
+    Chapters, heading, theme groupings eg. intro; news; contact info
+    </span></li>
+
+  <li>article 
+    <span class="description">
+    stand-alone content. articles, blogs, comments, magazines
+    </span></li>
+
+  <li>aside 
+    <span class="description">
+    Additional info. Bibliographies, endnotes, comments, pull quotes,
+     editorial sidebars.
+    </span></li>
+
+  <li>figure 
+    <span class="description">
+    Encapsulates images and figcaptions.
+    </span></li>
+
+  <li>figcaption 
+    <span class="description">
+    Adds captions. Moves with figure unlike p elements
+    </span></li>
+</ul>
+
 </body>
 <footer>
   <script src="./assets/script.js"></script>
