added home buttons

--- a/css-notes.html
+++ b/css-notes.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
-    <h1 class="card">CSS</h1>  
-    <ul>
-        <li>Enter your CSS notes here</li>
-    </ul>     
+    <a id="home" href="index.html">Home</a>
+    <h1 class="card">CSS</h1> 
+
+  <ul>
+    <li>Enter your CSS notes here</li>
+  </ul> 
+
 </body>
 <footer>
   <script src="./assets/script.js"></script>
