--- a/formatting-notes.html
+++ b/formatting-notes.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
+    <a id="home" href="index.html">Home</a>
     <h1 class="card">Formatting</h1>
     <h2 class="subtitle">from <a href="https://developers.google.com/style/html-formatting">Google's standard guidelines</a></h2>
 
