--- a/git-notes.html
+++ b/git-notes.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
-    <header>
-        <h1 class="card">Git</h1>
-    </header>
+    <a id="home" href="index.html">Home</a>
+    <h1 class="card">Git</h1>
 
     <h3>Jargon:</h3>
     <ul>
