--- a/javascript-notes.html
+++ b/javascript-notes.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
-    <h1 class="card">JavaScript</h1>
-    <ul>
-      <li>A variable is a named container that allows us to store data in our code.</li>
-      <li>Control flow is the order in which a computer executes code in a script.</li>
-    </ul>
+
+  <a id="home" href="index.html">Home</a>
+  <h1 class="card">JavaScript</h1>
+  <ul>
+    <li>A variable is a named container that allows us to store data in our code.</li>
+    <li>Control flow is the order in which a computer executes code in a script.</li>
+  </ul>
 </body>
 <footer>
   <script src="./assets/script.js"></script>
