--- a/other-notes.html
+++ b/other-notes.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
+    <a id="home" href="index.html">Home</a>
     <h1 class="card">Other Notes</h1>
 
     <h3>Development Jargon:</h3>
