seperate css files

--- a/formatting-notes.html
+++ b/formatting-notes.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head lang="en">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0/">
@@ -7,10 +8,23 @@
 </head>
 <body>
 
-    <a id="home" href="index.html">Home</a>
+  <header>
+    <a id="home-link" href="index.html">Home</a>
+    <div id="nav-divider-home"></div>
+    <a class="nav-link" href="html-notes.html">HTML</a>
+    <a class="nav-link" href="css-notes.html">CSS</a>
+    <a class="nav-link" href="git-notes.html">Git</a>
+    <a class="nav-link" href="javascript-notes.html">JavaScript</a>
+    <a class="nav-link" href="formatting-notes.html">Formatting</a>
+    <a class="nav-link" href="other-notes.html">Other</a>
+    
     <h1 class="card">Formatting</h1>
-    <h2 class="subtitle">from <a href="https://developers.google.com/style/html-formatting">Google's standard guidelines</a></h2>
-
+    <h2 class="subtitle">from <a 
+      href="https://developers.google.com/style/html-formatting">
+      Google's standard guidelines</a>
+    </h2>
+  </header>
+    
     <h3>Indentation:</h3>
     <ul>
         <li>Two spaces per indentation level (child/parent)</li>
@@ -45,4 +59,8 @@
         --></li>
     </ul>
 
-</body>
+    <footer>
+      Prework Study Guide - Daisy Everard - 2022
+    </footer>
+  </body>
+</html>
