--- a/html-notes.html
+++ b/html-notes.html
@@ -8,8 +8,18 @@
 </head>
 <body>
 
-  <a id="home" href="index.html">Home</a>
-<h1 class="card">HTML</h1>
+ <header>
+  <a id="home-link" href="index.html">Home</a>
+    <div id="nav-divider-home"></div>
+    <a class="nav-link" href="html-notes.html">HTML</a>
+    <a class="nav-link" href="css-notes.html">CSS</a>
+    <a class="nav-link" href="git-notes.html">Git</a>
+    <a class="nav-link" href="javascript-notes.html">JavaScript</a>
+    <a class="nav-link" href="formatting-notes.html">Formatting</a>
+    <a class="nav-link" href="other-notes.html">Other</a>
+    
+  <h1 class="card">HTML</h1>
+ </header>
 
 
 <h3>Semantic HTML:</h3>
@@ -51,14 +61,13 @@
     Encapsulates images and figcaptions.
     </span></li>
 
-  <li>figcaption 
-    <span class="description">
-    Adds captions. Moves with figure unlike p elements
+    <li>figcaption 
+      <span class="description">
+      Adds captions. Moves with figure unlike p elements
     </span></li>
-</ul>
-
+  </ul>
+  <footer>
+    Prework Study Guide - Daisy Everard - 2022
+  </footer>
 </body>
-<footer>
-  <script src="./assets/script.js"></script>
-</footer>
 </html>
