--- a/javascript-notes.html
+++ b/javascript-notes.html
@@ -8,14 +8,26 @@
 </head>
 <body>
 
-  <a id="home" href="index.html">Home</a>
-  <h1 class="card">JavaScript</h1>
+  <header> 
+    <a id="home-link" href="index.html">Home</a>
+    <div id="nav-divider-home"></div>
+    <a class="nav-link" href="html-notes.html">HTML</a>
+    <a class="nav-link" href="css-notes.html">CSS</a>
+    <a class="nav-link" href="git-notes.html">Git</a>
+    <a class="nav-link" href="javascript-notes.html">JavaScript</a>
+    <a class="nav-link" href="formatting-notes.html">Formatting</a>
+    <a class="nav-link" href="other-notes.html">Other</a>
+    
+    <h1 class="card">JavaScript</h1>
+  </header>
+
   <ul>
     <li>A variable is a named container that allows us to store data in our code.</li>
     <li>Control flow is the order in which a computer executes code in a script.</li>
   </ul>
-</body>
-<footer>
-  <script src="./assets/script.js"></script>
-</footer>
+
+    <footer>
+      Prework Study Guide - Daisy Everard - 2022
+    </footer>
+  </body>
 </html>
