--- a/css-notes.html
+++ b/css-notes.html
@@ -7,15 +7,26 @@
     <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
-    <a id="home" href="index.html">Home</a>
+
+  <header>
+    <a id="home-link" href="index.html">Home</a>
+    <div id="nav-divider-home"></div>
+    <a class="nav-link" href="html-notes.html">HTML</a>
+    <a class="nav-link" href="css-notes.html">CSS</a>
+    <a class="nav-link" href="git-notes.html">Git</a>
+    <a class="nav-link" href="javascript-notes.html">JavaScript</a>
+    <a class="nav-link" href="formatting-notes.html">Formatting</a>
+    <a class="nav-link" href="other-notes.html">Other</a>
+
     <h1 class="card">CSS</h1> 
+  </header>
 
   <ul>
     <li>Enter your CSS notes here</li>
   </ul> 
 
-</body>
-<footer>
-  <script src="./assets/script.js"></script>
-</footer>
+    <footer>
+      Prework Study Guide - Daisy Everard - 2022
+    </footer>
+  </body>
 </html>
