--- a/git-notes.html
+++ b/git-notes.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
-    <a id="home" href="index.html">Home</a>
-    <h1 class="card">Git</h1>
+    
+    <header>
+        <a id="home-link" href="index.html">Home</a>
+        <div id="nav-divider-home"></div>
+        <a class="nav-link" href="html-notes.html">HTML</a>
+        <a class="nav-link" href="css-notes.html">CSS</a>
+        <a class="nav-link" href="git-notes.html">Git</a>
+        <a class="nav-link" href="javascript-notes.html">JavaScript</a>
+        <a class="nav-link" href="formatting-notes.html">Formatting</a>
+        <a class="nav-link" href="other-notes.html">Other</a>
+        
+        <h1 class="card">Git</h1>
+    </header>
 
     <h3>Jargon:</h3>
     <ul>
@@ -83,8 +94,8 @@
         </li>
      </ul>
 
+     <footer>
+        Prework Study Guide - Daisy Everard - 2022
+      </footer>
 </body>
-<footer>
-  <script src="./assets/script.js"></script>
-</footer>
 </html>
