--- a/other-notes.html
+++ b/other-notes.html
@@ -9,14 +9,15 @@
 <body>
     
     <header>
+      <section id="nav-bar">
         <a id="home-link" href="index.html">Home</a>
-        <div id="nav-divider-home"></div>
         <a class="nav-link" href="html-notes.html">HTML</a>
         <a class="nav-link" href="css-notes.html">CSS</a>
         <a class="nav-link" href="git-notes.html">Git</a>
         <a class="nav-link" href="javascript-notes.html">JavaScript</a>
         <a class="nav-link" href="formatting-notes.html">Formatting</a>
         <a class="nav-link" href="other-notes.html">Other</a>
+      </section>
         
       <h1 class="card">Other Notes</h1>
     </header>
