--- a/html-notes.html
+++ b/html-notes.html
@@ -9,14 +9,16 @@
 <body>
 
  <header>
-  <a id="home-link" href="index.html">Home</a>
-    <div id="nav-divider-home"></div>
+  <section id="nav-bar">
+    <a id="home-link" href="index.html">Home</a>
     <a class="nav-link" href="html-notes.html">HTML</a>
     <a class="nav-link" href="css-notes.html">CSS</a>
     <a class="nav-link" href="git-notes.html">Git</a>
     <a class="nav-link" href="javascript-notes.html">JavaScript</a>
     <a class="nav-link" href="formatting-notes.html">Formatting</a>
     <a class="nav-link" href="other-notes.html">Other</a>
+  </section>
+  
     
   <h1 class="card">HTML</h1>
  </header>
