--- a/git-notes.html
+++ b/git-notes.html
@@ -94,7 +94,20 @@
           This is particularly important for permanent branches.
         </li>
      </ul>
-
+     <br>
+     
+     <section id="bibliography">
+        <h2>Sources</h2>
+        <ol>
+          <li>Types of branches & 
+            Branch naming conventions - 
+            <a href="https://codingsight.com/git-branching-naming-convention-best-practices/" >
+                https://codingsight.com/git-branching-naming-convention-best-practices/
+            </a>
+          </li>
+        </ol>
+      </section>
+      
      <footer>
         Prework Study Guide - Daisy Everard - 2022
       </footer>
