--- a/html-notes.html
+++ b/html-notes.html
@@ -68,6 +68,18 @@
       Adds captions. Moves with figure unlike p elements
     </span></li>
   </ul>
+  <br>
+  
+  <section id="bibliography">
+    <h2>Sources</h2>
+    <p>Unless otherwise stated,
+    based on notes made from FreeCodeCamp and Codecademy courses
+    </p>
+    <ol>
+      <li></li>
+    </ol>
+  </section>
+  
   <footer>
     Prework Study Guide - Daisy Everard - 2022
   </footer>
