--- a/other-notes.html
+++ b/other-notes.html
@@ -50,7 +50,18 @@
         <li>start __ <span class="description">open file</span></li>
         <li>code . <span class="description">open vs code</span></li>
     </ul>
-        
+    <br>
+    
+    <section id="bibliography">
+      <h2>Sources</h2>
+      <p>Unless otherwise stated,
+        based on notes made from EdX course hosted on bootcampspot
+      </p>
+      <ol>
+        <li></li>
+      </ol>
+    </section>
+
       <footer>
         Prework Study Guide - Daisy Everard - 2022
       </footer>
