--- a/css-notes.html
+++ b/css-notes.html
@@ -25,6 +25,17 @@
   <ul>
     <li>Enter your CSS notes here</li>
   </ul> 
+  <br>
+
+  <section id="bibliography">
+    <h2>Sources</h2>
+    <p>Unless otherwise stated,
+      based on notes made from FreeCodeCamp and Codecademy courses
+    </p>
+    <ol>
+      <li></li>
+    </ol>
+  </section>
 
     <footer>
       Prework Study Guide - Daisy Everard - 2022
