--- a/javascript-notes.html
+++ b/javascript-notes.html
@@ -27,6 +27,17 @@
     <li>A variable is a named container that allows us to store data in our code.</li>
     <li>Control flow is the order in which a computer executes code in a script.</li>
   </ul>
+  <br>
+  
+  <section id="bibliography">
+    <h2>Sources</h2>
+    <p>Unless otherwise stated,
+    based on notes made from FreeCodeCamp and Codecademy courses
+    </p>
+    <ol>
+      <li></li>
+    </ol>
+  </section>
 
     <footer>
       Prework Study Guide - Daisy Everard - 2022
