changed to i elements

--- a/formatting-notes.html
+++ b/formatting-notes.html
@@ -53,7 +53,8 @@
           For multiline comments,
         use indents and put brackets on seperate line. 
           This improves readability
-        --></li>
+        -->
+      TO DO: How to display (!-- string on page</li>
     </ul>
     <br>
     
