--- a/html-notes.html
+++ b/html-notes.html
@@ -26,47 +26,49 @@
 
 <h3>Semantic HTML:</h3>
 <ul>
-  <li>Semantic HTML <span class="description">Elements defined by use</span></li>
-  <li>header <span class="description">
+  <li>Semantic HTML <i class="description">Elements defined by use</i></li>
+  <li>header <i class="description">
     navigational links, introductory content, h1-h6. use h1 only once on page
-    </span>
+  </i>
   </li>
 
-  <li>nav <span class="description">
+  <li>nav <i class="description">
     For navigation links (menu, table of content...), On own or in header,  
-    </span>
+  </i>
   </li>
 
-  <li>main <span class="description">Section where main content appears</span></li>
+  <li>main <i class="description">
+    Section where main content appears
+  </i></li>
   
-  <li>footer <span class="description">
+  <li>footer <i class="description">
     Contact info, copyright, terms of use, site map, ref to top of page links. 
-    </span></li>
+  </i></li>
 
-  <li>section <span class="description">
+  <li>section <i class="description">
     Chapters, heading, theme groupings eg. intro; news; contact info
-    </span></li>
+  </i></li>
 
   <li>article 
-    <span class="description">
+    <i class="description">
     stand-alone content. articles, blogs, comments, magazines
-    </span></li>
+    </i></li>
 
   <li>aside 
-    <span class="description">
+    <i class="description">
     Additional info. Bibliographies, endnotes, comments, pull quotes,
      editorial sidebars.
-    </span></li>
+    </i></li>
 
   <li>figure 
-    <span class="description">
+    <i class="description">
     Encapsulates images and figcaptions.
-    </span></li>
+    </i></li>
 
     <li>figcaption 
-      <span class="description">
+      <i class="description">
       Adds captions. Moves with figure unlike p elements
-    </span></li>
+      </i></li>
   </ul>
   <br>
   
