--- a/other-notes.html
+++ b/other-notes.html
@@ -24,31 +24,31 @@
 
     <h3>Development Jargon:</h3>
     <ul>
-        <li>User stories <span class="description">The type of user, what they want from an app, why they need it (what problem are they solving?)</span></li>
-         <li>Acceptance criteria <span class="description">Is it done? List of thing app needs to be finished</span></li>
+        <li>User stories <i class="description">The type of user, what they want from an app, why they need it (what problem are they solving?)</i></li>
+         <li>Acceptance criteria <i class="description">Is it done? List of thing app needs to be finished</i></li>
     </ul>
     <br>
 
     <h3>Computational Thinking:</h3>
      <ul>
-        <li>Decomposition <span class="description">Breaking into small tasks. write pseudocode as steps in comments</span></li>
-        <li>Pattern recognition <span class="description">repeating similar subtasks</span></li>
-        <li>Abstraction <span class="description">Ignore irrelevant details</span></li>
-        <li>Algorithms <span class="description">ordering, event triggers, conditions, debugging</span></li>
-        <li>Debugging <span class="description">finding mistakes and gaps</span></li>
+        <li>Decomposition <i class="description">Breaking into small tasks. write pseudocode as steps in comments</i></li>
+        <li>Pattern recognition <i class="description">repeating similar subtasks</i></li>
+        <li>Abstraction <i class="description">Ignore irrelevant details</i></li>
+        <li>Algorithms <i class="description">ordering, event triggers, conditions, debugging</i></li>
+        <li>Debugging <i class="description">finding mistakes and gaps</i></li>
     </ul>
     <br>
 
     <h3>CLI (Command line interface):</h3>
     <ul>
-        <li>pwd <span class="description">(print working directory) where you are now</span></li>
-        <li>ls <span class="description">list files in working directory</span></li>
-        <li>cd __ <span class="description">change directory to __</span></li>
-        <li>cd .. <span class="description">change back one directory level</span></li>
-        <li>mkdir <span class="description">make a new directory</span></li>
-        <li>touch <span class="example">file-name.txt </span><span class="description">create new text file</span></li>
-        <li>start __ <span class="description">open file</span></li>
-        <li>code . <span class="description">open vs code</span></li>
+        <li>pwd <i class="description">(print working directory) where you are now</i></li>
+        <li>ls <i class="description">list files in working directory</i></li>
+        <li>cd __ <i class="description">change directory to __</i></li>
+        <li>cd .. <i class="description">change back one directory level</i></li>
+        <li>mkdir <i class="description">make a new directory</i></li>
+        <li>touch <span class="example">file-name.txt </span><i class="description">create new text file</i></li>
+        <li>start __ <i class="description">open file</i></li>
+        <li>code . <i class="description">open vs code</i></li>
     </ul>
     <br>
     
